// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generatePages generatePage 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "alt": "comic page",
      "src": undefined,
      "width": NaN,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "alt": "comic page",
        "src": undefined,
        "width": NaN,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`generatePages should render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <generatePages
    pages={
      Array [
        Object {
          "key": 0,
          "page": "abc.png",
          "width": 100,
        },
        Object {
          "key": 1,
          "page": "deb.png",
          "width": 300,
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Array [
    <Page
      alt="comic page"
      src="abc.png"
      width={25}
    />,
    <Page
      alt="comic page"
      src="deb.png"
      width={75}
    />,
  ],
  Symbol(enzyme.__nodes__): Array [
    Array [
      <Page
        alt="comic page"
        src="abc.png"
        width={25}
      />,
      <Page
        alt="comic page"
        src="deb.png"
        width={75}
      />,
    ],
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
